# Adafruit_CircuitPython_NeoPixel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  LICENSE  README.md  README.rst  conf.py  neopixel.mpy  neopixel.py  neopixelhsv.py  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: build.yml  release.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: mock_example.py  neopixel_bouncing_ball.py  neopixel_pixel.py  neopixel_rainbowio_simpletest.py  neopixel_rpi_simpletest.py  neopixel_simpletest.py  neopixelhsv_simpletest.py  rpi_neopixel_simpletest.py  strip.py
